--- a/accounts/templates/accounts/dashboard.html
+++ b/accounts/templates/accounts/dashboard.html
@@ -15,8 +15,15 @@
 				<tr>
 					<th></th>
 					<th>Customer</th>
-					<th>Orders</th>
+					<th>Phone</th>
 				</tr>
+				{% for customer in customers %}
+					<tr>
+						<td><a class="btn btn-sm btn-info" href="{% url 'customers' customer.id %}">View</a></td>
+						<td>{{ customer.name }}</td>
+						<td>{{ customer.phone }}</td>
+					</tr>
+				{% endfor %}
 
 			</table>
 		</div>
@@ -35,7 +42,16 @@
 					<th>Update</th>
 					<th>Remove</th>
 				</tr>
-		
+
+				{% for order in orders %}
+				<tr>
+					<td>{{ order.product.name }}</td>
+					<td>{{ order.date_created }}</td>
+					<td>{{ order.status }}</td>
+					<td><a class="btn btn-sm btn-info" href="#">Update</td>
+					<td><a class="btn btn-sm btn-danger" href="#">Delete</td>
+				</tr>
+			{% endfor %}
 			</table>
 		</div>
 	</div>
