--- a/accounts/templates/accounts/customers.html
+++ b/accounts/templates/accounts/customers.html
@@ -9,7 +9,7 @@
 			<h5>Customer:</h5>
 			<hr>
 			<a class="btn btn-outline-info  btn-sm btn-block" href="">Update Customer</a>
-			<a class="btn btn-outline-danger  btn-sm btn-block" href="">Delete Customer</a>
+			<a class="btn btn-outline-info  btn-sm btn-block" href="{% url 'create-order' customer.id %}">Place Order</a>
 
 		</div>
 	</div>
@@ -38,7 +38,7 @@
 	<div class="col">
 		<div class="card card-body">
 			<form method="get">
-
+				{{ myFilter.form }}
 		    <button class="btn btn-primary" type="submit">Search</button>
 		  </form>
 		</div>
@@ -65,8 +65,8 @@
 					<td>{{ order.product.category }}</td>
 					<td>{{ order.date_created }}</td>
 					<td>{{ order.status }}</td>
-					<td><a class="btn btn-sm btn-info" href="#">Update</a></td>
-					<td><a class="btn btn-sm btn-danger" href="#">Remove</a></td>
+					<td><a class="btn btn-sm btn-info" href="{% url 'update-order' order.id %}">Update</td>
+					<td><a class="btn btn-sm btn-danger" href="{% url 'delete-order' order.id %}">Delete</td>
 				</tr>	
 				{% endfor %}
 			</table>
