--- a/accounts/templates/accounts/navbar.html
+++ b/accounts/templates/accounts/navbar.html
@@ -1,5 +1,13 @@
 {% load static %}
 
+<style type="text/css">
+  .name{
+    color: white;
+    font-size: 18px;
+    margin-right: 20px; 
+  }
+</style>
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <img src="{% static 'images/logo.png' %}" height="60px" width="70px">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -16,4 +24,7 @@
 
     </ul>
   </div>
+
+  <span class="name">Hello, {{ request.user }}</span>
+  <span class="name"><a href="{% url 'logout' %}">Logout</a></span>
 </nav>
