--- a/accounts/templates/accounts/navbar.html
+++ b/accounts/templates/accounts/navbar.html
@@ -11,22 +11,33 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <img src="{% static 'images/logo.png' %}" height="60px" width="70px">
-{% if request.user.is_staff %}
+
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
+    <ul class="navbar-nav">
+
+{% if request.user.is_staff %}
+    
         <li class="nav-item active">
           <a class="nav-link" href="{% url 'home' %}">Dashboard</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'products' %}">Products</a>
         </li>
+        
+{% else %}
+
+    <li class="nav-item">
+      <a class="nav-link" href="{% url 'settings' %}">Settings</a>
+    </li>
+
       </ul>
-    </div>
 {% endif %}
+    </div>
+
 
   <span class="name">Hello, {{ request.user }}</span>
   <span class="name"><a href="{% url 'logout' %}">Logout</a></span>
